[package]
name = "decryption-issue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.4"
cms = "0.2.2"
const-oid = "0.9.5"
der = { version = "0.7.8", features = ["alloc"] }
openssl = "0.10.57"
